Fix layout bug in mobile
Added in [af8c4ec]

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -302,6 +302,7 @@ iframe {
     @media (max-width: 580px) {
       display: flex;
       position: relative;
+      max-width: none;
       top: auto;
       align-items: center;
       margin-top: 0rem;
